--- a/app/views/shared/edit_fields/_assembledCollection_fields.html.erb
+++ b/app/views/shared/edit_fields/_assembledCollection_fields.html.erb
@@ -1,8 +1,6 @@
 <div class="fields">
 	<div id="assembledCollectionId">
-	    <br/>
-	    <%= f.select :id, options_for_select(@dams_assembled_collections, :selected => "#{Rails.configuration.id_namespace}#{@assembledCollection_id}") , {:include_blank => 'Select Assembled Collection'}, :id=>"newClassNameCollectionId", :onChange=>"javascript: checkOption(this.id,true,'dams_assembled_collections');" %>
-	    <br/>
-	    <%= link_to_remove_fields "Remove Assembled Collection", f %>
+	    <%= f.select :id, options_for_select(@dams_assembled_collections, :selected => "#{Rails.configuration.id_namespace}#{@assembledCollection_id}") , {:include_blank => 'Select Assembled Collection'}, :id=>"newClassNameCollectionId", :onChange=>"javascript: checkOption(this.id,true,'dams_assembled_collections');" %>	    
+		<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
     </div>
 </div>
