--- a/app/views/shared/edit_fields/_complex_subjects_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_complex_subjects_edit_form.html.erb
@@ -8,8 +8,7 @@
 			<div class="fields">
 				<br/>
 				<%= select_tag "#{object_type}[subjectURI][]", options_for_select(@mads_complex_subjects, :selected => "#{Rails.configuration.id_namespace}#{complexSubject[i].pid}") , :prompt=>"Select Subject", :class=>"complexSubjectClass#{i}", :id=>"complexSubjectId#{i}", :onChange=>"javascript: checkOption(this.className,false,'mads_complex_subjects');"%>
-				<br/>
-    			<%= link_to_remove_fields "Remove Complex Subject", f %>				
+    			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>				
 			</div>					
 <%			
 			i +=1		
@@ -20,11 +19,10 @@
 		<div class="fields">
 			<br/>
 			<%= select_tag "#{object_type}[subjectURI][]", options_for_select(@mads_complex_subjects) , :prompt=>"Select Subject", :class=>"newClassName", :id=>"newClassNameId", :onChange=>"javascript: checkOption(this.className,false,'mads_complex_subjects');"%>
-			<br/>
-			<%= link_to_remove_fields "Remove Complex Subject", f %>				
+			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>				
 		</div>	
 <%	
     end
 %> 
 
-<p><%= link_to_add_edit_fields "Add Complex Subject", f, :complexSubject, "#{object_type}"%></p>
+<p class="addIcon"><%= link_to_add_edit_fields "+", f, :complexSubject, "#{object_type}"%></p>
