--- a/app/views/shared/edit_fields/_language_form.html.erb
+++ b/app/views/shared/edit_fields/_language_form.html.erb
@@ -11,4 +11,4 @@
 	<% end %>	  
 </div>
 
-<p><%= link_to_add_fields "Add Language", f, :language, "MadsLanguage", "#{object_type}" %></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :language, "MadsLanguage", "#{object_type}" %></p>
