--- a/app/views/shared/edit_fields/_notes_form.html.erb
+++ b/app/views/shared/edit_fields/_notes_form.html.erb
@@ -4,4 +4,4 @@
     <%= render "shared/edit_fields/note_fields", :f => builder %>              
   <% end %>
 </div>
-<p><%= link_to_add_fields "Add Note", f, :note, "DamsNote", "#{object_type}"%></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :note, "DamsNote", "#{object_type}"%></p>
