--- a/app/views/shared/edit_fields/_rights_holder_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_rights_holder_edit_form.html.erb
@@ -17,4 +17,4 @@
   end 
 %>
 
-<p><%= link_to_add_dynamic_fields "Add Rights Holder", f, "#{object_type}", nameTypeArray, "rightsHolder", "#{i}", 1 %></p>
+<p class="addIcon"><%= link_to_add_dynamic_fields "+", f, "#{object_type}", nameTypeArray, "rightsHolder", "#{i}", 1 %></p>
