--- a/app/views/get_data/get_name.html.erb
+++ b/app/views/get_data/get_name.html.erb
@@ -20,5 +20,4 @@
 		<%= select_tag "#{@formType}[#{@fieldName}_attributes][#{@fieldId}][id]", options_for_select(@names, :selected => "#{Rails.configuration.id_namespace}#{@selectedValue}") , :prompt=>"Select #{@label}", :onChange=>"javascript: checkOption(this.id,true,'#{@label}');" %>
 	<% end %>
 <% end %>
-<br/>
-<%= link_to_delete_fields "Remove #{@label}"%>
+<p class="removeIcon"><%= link_to_delete_fields "X"%></p>
