--- a/app/views/get_data/get_subject.html.erb
+++ b/app/views/get_data/get_subject.html.erb
@@ -8,5 +8,4 @@
 <% else %>
 	<%= select_tag "#{@formType}[#{@fieldName}_attributes][#{@fieldId}][id]", options_for_select(@subjects, :selected => "#{Rails.configuration.id_namespace}#{@selectedValue}") , :prompt=>"Select #{@label}", :onChange=>"javascript: checkOption(this.id,true,'#{@label}');" %>
 <% end %>
-<br/>
-<%= link_to_delete_fields "Remove #{@label}"%>
+<p class="removeIcon"><%= link_to_delete_fields "X"%></p>
