--- a/app/views/shared/edit_fields/_assembled_collections_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_assembled_collections_edit_form.html.erb
@@ -8,8 +8,7 @@
 			<div class="fields">
 				<br/>
 				<%= select_tag "#{object_type}[assembledCollectionURI][]", options_for_select(@dams_assembled_collections, :selected => "#{Rails.configuration.id_namespace}#{assembledCollection[i].pid}") , :prompt=>"Select Assembled Collection", :class=>"assembledCollectionClass#{i}", :id=>"assembledCollectionId#{i}", :onChange=>"javascript: checkOption(this.className,false,'dams_assembled_collections');"%>
-				<br/>
-    			<%= link_to_remove_fields "Remove Assembled Collection", f %>				
+    			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>				
 			</div>					
 <%			
 			i +=1		
@@ -20,11 +19,10 @@
 		<div class="fields">
 			<br/>
 			<%= select_tag "#{object_type}[assembledCollectionURI][]", options_for_select(@dams_assembled_collections) , :prompt=>"Select Assembled Collection", :class=>"assembledCollectionClass#{i}", :id=>"assembledCollectionId#{i}", :onChange=>"javascript: checkOption(this.className,false,'dams_assembled_collections');"%>
-			<br/>
-			<%= link_to_remove_fields "Remove Assembled Collection", f %>				
+			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>				
 		</div>	
 <%	
     end
 %> 
 
-<p><%= link_to_add_edit_fields "Add Assembled Collection", f, :assembledCollection, "#{object_type}"%></p>
+<p class="addIcon"><%= link_to_add_edit_fields "+", f, :assembledCollection, "#{object_type}"%></p>
