--- a/app/views/shared/edit_fields/_assembled_collections_form.html.erb
+++ b/app/views/shared/edit_fields/_assembled_collections_form.html.erb
@@ -3,4 +3,4 @@
   <%= render "shared/edit_fields/assembledCollection_fields", :f => builder , :object_type => object_type%>
 <% end %>
 
-<p><%= link_to_add_fields "Add Assembled Collection", f, :assembledCollection, "DamsAssembledCollection", "#{object_type}" %></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :assembledCollection, "DamsAssembledCollection", "#{object_type}" %></p>
