--- a/app/views/shared/edit_fields/_complex_subjects_form.html.erb
+++ b/app/views/shared/edit_fields/_complex_subjects_form.html.erb
@@ -3,4 +3,4 @@
   <%= render "shared/edit_fields/complexSubject_fields", :f => builder , :object_type => object_type%>
 <% end %>
 
-<p><%= link_to_add_fields "Add Complex Subject", f, :complexSubject, "MadsComplexSubject", "#{object_type}" %></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :complexSubject, "MadsComplexSubject", "#{object_type}" %></p>
