--- a/app/views/shared/edit_fields/_creator_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_creator_edit_form.html.erb
@@ -14,4 +14,4 @@
   end 
 %>
 
-<p><%= link_to_add_dynamic_fields "Add Name", f, "#{object_type}", typeArray, "creator", "#{i}", 1%></p>
+<p class="addIcon"><%= link_to_add_dynamic_fields "+", f, "#{object_type}", typeArray, "creator", "#{i}", 1%></p>
