--- a/app/views/shared/edit_fields/_custodialResponsibilityNote_fields.html.erb
+++ b/app/views/shared/edit_fields/_custodialResponsibilityNote_fields.html.erb
@@ -5,6 +5,5 @@
     <%= f.text_field :type, :value => "", class: "input-block-level"%>
     <%= f.label :displayLabel, "Custodial Responsibility Note Display Label" %>
     <%= f.text_field :displayLabel, :value => "", class: "input-block-level"%>
-    <br/>     
-    <%= link_to_remove_fields "Remove Custodial Responsibility Note", f %>
+    <p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
 </div>
