--- a/app/views/shared/edit_fields/_date_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_date_edit_form.html.erb
@@ -16,8 +16,7 @@
 				<%= text_field_tag "#{object_type}[date_attributes][#{i}][type]", date[i].type, class: "input-block-level" %>
 				<%= label_tag "#{object_type}[date_attributes][#{i}][encoding]", "Date Encoding" %>
 				<%= text_field_tag "#{object_type}[date_attributes][#{i}][encoding]", date[i].encoding, class: "input-block-level" %>
-				<br/>
-    			<%= link_to_remove_fields "Remove Date", f %>				
+    			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>				
 			</div>					
 <%			
 			i +=1		
@@ -36,12 +35,11 @@
 				<%= text_field_tag "#{object_type}[date_attributes][#{i}][type]", "",class: "input-block-level" %>
 				<%= label_tag "#{object_type}[date_attributes][#{i}][encoding]", "Date Encoding" %>
 				<%= text_field_tag "#{object_type}[date_attributes][#{i}][encoding]", "",class: "input-block-level" %>		
-				<br/>
-    			<%= link_to_remove_fields "Remove Date", f %>
+    			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
 			</div>	
 <%	
 		end
     end
 %> 
 </div>
-<p><%= link_to_add_fields "Add Date", f, :date, "DamsNote", "#{object_type}" %></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :date, "DamsNote", "#{object_type}" %></p>
