--- a/app/views/shared/edit_fields/_date_fields.html.erb
+++ b/app/views/shared/edit_fields/_date_fields.html.erb
@@ -1,4 +1,5 @@
 <div class="fields">
+
     <%= f.label :value, "Date" %>
     <%= f.text_field :value , :value => "", class: "input-block-level"%>    
     <%= f.label :beginDate, "Begin Date" %>
@@ -9,8 +10,7 @@
     <%= f.text_field :type, :value => "", class: "input-block-level"%>    
     <%= f.label :encoding, "Date Encoding" %>
     <%= f.text_field :encoding, :value => "", class: "input-block-level"%>
-    <br/>
-    <%# if (f.object.class != DamsDate) %>
-    	<%= link_to_remove_fields "Remove Date", f %>
+    <p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
+    <%# if (f.object.class != DamsDate) %>	    	
     <%# end %>    
 </div>
