--- a/app/views/shared/edit_fields/_date_form.html.erb
+++ b/app/views/shared/edit_fields/_date_form.html.erb
@@ -5,4 +5,4 @@
   <% end %>
 </div>
 <!-- Workaround to add multiple Dates because DamsDate has no datastream. -->
-<p><%= link_to_add_fields "Add Date", f, :date, "DamsNote" , "#{object_type}"%></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :date, "DamsNote" , "#{object_type}"%></p>
