--- a/app/views/shared/edit_fields/_language_edit_fields.html.erb
+++ b/app/views/shared/edit_fields/_language_edit_fields.html.erb
@@ -1,6 +1,5 @@
 <div class="fields">
 	<br/>
 	<%= select_tag "#{object_type}[languageURI][]", options_for_select(@mads_languages) , :prompt=>"Select Language", :class=>"newClassName", :id=>"newClassNameId", :onChange=>"javascript: checkOption(this.className,false,'mads_languages');"%>
-	<br/>
-	<%= link_to_remove_fields "Remove Language", f%>			
+	<p class="removeIcon"><%= link_to_remove_fields "X", f%></p>			
 </div>
