--- a/app/views/shared/edit_fields/_language_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_language_edit_form.html.erb
@@ -10,7 +10,7 @@
 				<%= select_tag "#{object_type}[languageURI][]", options_for_select(@mads_languages, :selected => "#{Rails.configuration.id_namespace}#{language[i].pid}") , :prompt=>"Select Language", required: true, :class=>"languageClass#{i}", :id=>"languageId#{i}", :onChange=>"javascript: checkOption(this.className,false,'mads_languages');"%>
 				<br/>
 				<% if i > 0%>
-    			<%= link_to_remove_fields "Remove Language", f %>
+    			<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
     			<% end %>					
 			</div>					
 <%			
@@ -19,4 +19,4 @@
     end
 %> 
 
-<p><%= link_to_add_edit_fields "Add Language", f, :language, "#{object_type}"%></p>
+<p class="addIcon"><%= link_to_add_edit_fields "+", f, :language, "#{object_type}"%></p>
