--- a/app/views/shared/edit_fields/_preferredCitationNote_fields.html.erb
+++ b/app/views/shared/edit_fields/_preferredCitationNote_fields.html.erb
@@ -4,7 +4,6 @@
     <%= f.label :type, "Preferred Citation Note Type" %>
     <%= f.text_field :type, :value => "", class: "input-block-level"%>
     <%= f.label :displayLabel, "Preferred Citation Note Display Label" %>
-    <%= f.text_field :displayLabel, :value => "", class: "input-block-level"%>
-    <br/>                 
-    <%= link_to_remove_fields "Remove Preferred Citation Note", f %>
+    <%= f.text_field :displayLabel, :value => "", class: "input-block-level"%>               
+    <p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
 </div>
