--- a/app/views/shared/edit_fields/_related_resource_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_related_resource_edit_form.html.erb
@@ -22,9 +22,8 @@
 					<%= url_field_tag "#{object_type}[relatedResource_attributes][#{i}][uri]", resource[i].uri, class: "input-block-level" %>
 					<%= label_tag "#{object_type}[relatedResource_attributes][#{i}][description]", "Description" %>
 					<%= text_field_tag "#{object_type}[relatedResource_attributes][#{i}][description]", resource[i].description, class: "input-block-level" %>
-					<br/>
 					<% if (f.object.class != RelatedResource && first != 0) %> 
-    					<%= link_to_remove_fields "Remove RelatedResource", f %>
+    					<p class="removeIcon"><%= link_to_remove_fields "X", f %></p>
     				<% end %> 			
 				</div>					
 <%			
@@ -47,4 +46,4 @@
 				
     end
 %> 
-<p><%= link_to_add_fields "Add Related Resource", f, :relatedResource, "DamsNote", "DamsNote" %></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :relatedResource, "DamsNote", "DamsNote" %></p>
