--- a/app/views/shared/edit_fields/_related_resource_form.html.erb
+++ b/app/views/shared/edit_fields/_related_resource_form.html.erb
@@ -5,4 +5,4 @@
    <% end %>
 </div>
 <!-- Workaround to add multiple RelatedResources because RelatedResource has no datastream. -->
-<p><%= link_to_add_fields "Add Related Resource", f, :relatedResource, "DamsNote", "DamsNote" %></p>
+<p class="addIcon"><%= link_to_add_fields "+", f, :relatedResource, "DamsNote", "DamsNote" %></p>
