--- a/app/views/shared/edit_fields/_relationship_edit_form.html.erb
+++ b/app/views/shared/edit_fields/_relationship_edit_form.html.erb
@@ -15,5 +15,5 @@
   end 
 %>
 
-<p><%= link_to_add_dynamic_fields "Add Creator", f, "#{object_type}", typeArray, "relationship", "#{i}", 1%></p>
+<p class="addIcon"><%= link_to_add_dynamic_fields "+", f, "#{object_type}", typeArray, "relationship", "#{i}", 1%></p>
 
