--- a/app/views/shared/edit_fields/_relationship_form.html.erb
+++ b/app/views/shared/edit_fields/_relationship_form.html.erb
@@ -5,4 +5,4 @@
 
   <%= render :partial => 'shared/edit_fields/relationship_fields' , :locals => {:f => f, :object_type => object_type, :typeArray => typeArray}%>
 
-  <p><%= link_to_add_dynamic_fields "Add Creator", f, "#{object_type}", typeArray, "relationship", 0, 0%></p>
+  <p class="addIcon"><%= link_to_add_dynamic_fields "+", f, "#{object_type}", typeArray, "relationship", 0, 0%></p>
