--- a/app/views/shared/edit_fields/_rights_holder_form.html.erb
+++ b/app/views/shared/edit_fields/_rights_holder_form.html.erb
@@ -7,4 +7,4 @@
 
 <%= render :partial => 'shared/edit_fields/rightsHolder_fields' , :locals => {:f => f, :object_type => object_type, :typeArray => nameTypeArray}%>
 
-<p><%= link_to_add_dynamic_fields "Add Rights Holder", f, "#{object_type}", nameTypeArray, "rightsHolder", 0, 0 %></p>
+<p class="addIcon"><%= link_to_add_dynamic_fields "+", f, "#{object_type}", nameTypeArray, "rightsHolder", 0, 0 %></p>
