--- a/app/views/shared/edit_fields/_simple_subjects_form.html.erb
+++ b/app/views/shared/edit_fields/_simple_subjects_form.html.erb
@@ -5,4 +5,4 @@
 
 <%= render :partial => 'shared/edit_fields/simple_subjects_fields' , :locals => {:f => f, :object_type => object_type, :typeArray => typeArray}%>
     
-<p><%= link_to_add_dynamic_fields "Add Simple Subject", f, "#{object_type}", typeArray, "simple_subjects", 0, 0%></p>
+<p class="addIcon"><%= link_to_add_dynamic_fields "+", f, "#{object_type}", typeArray, "simple_subjects", 0, 0%></p>
