--- a/app/views/dams_related_resources/show.html.erb
+++ b/app/views/dams_related_resources/show.html.erb
@@ -2,7 +2,16 @@
 <% uri = render_document_show_field_value(:document=>@document, :field=>"relatedResourceURI_tesim") %>
 <% description = render_document_show_field_value(:document=>@document, :field=>"relatedResourceDescription_tesim") %>
 <% record_id = render_document_show_field_value(:document=>@document, :field=>"id_t") %>
-
+<% 
+	resourceLabel = nil
+	if(type.length > 0 && description.length > 0)
+		resourceLabel = type + " - " + description
+	elsif(type.length > 0 && description.length = 0)
+		resourceLabel = type
+	elsif(type.length = 0 && description.length > 0)
+		resourceLabel = description
+	end		
+%>
 <% @page_title =  "Dams Related Resource" %>
 
 <div class="row-fluid">
@@ -15,7 +24,7 @@
 			    <p>Description: <%= description %></p>
 			</section>
 		</div>
-	  <%= render :partial => 'shared/edit_fields/show_form_hidden_fields' , :locals => {:record_id => record_id, :name => type, :parent_id => params[:parent_id], :parent_class => params[:parent_class]}%>  
+	  <%= render :partial => 'shared/edit_fields/show_form_hidden_fields' , :locals => {:record_id => record_id, :name => resourceLabel, :parent_id => params[:parent_id], :parent_class => params[:parent_class]}%>  
   </div>
 	  <% if(params[:parent_id].nil? and params[:parent_class].nil?) %>	
 			<div class="span3">
