--- a/app/views/dams_copyrights/new.html.erb
+++ b/app/views/dams_copyrights/new.html.erb
@@ -1,17 +1,17 @@
 <h1>Create a new DAMS Copyright</h1>
 <%= form_for @dams_copyright do |f| %>
-  <%= label_tag 'dams_copyright[status]', "Status" %><%= text_field_tag 'dams_copyright[status]' %>
-  <%= label_tag 'dams_copyright[jurisdiction]', "Jurisdiction" %><%= text_field_tag 'dams_copyright[jurisdiction]' %>
-  <%= label_tag 'dams_copyright[purposeNote]', "Purpose Note" %><%= text_field_tag 'dams_copyright[purposeNote]' %>
-  <%= label_tag 'dams_copyright[note]', "Note" %><%= text_field_tag 'dams_copyright[note]' %>
-  <%#= label_tag 'dams_copyright[beginDate]', "Begin Date" %><%#= text_field_tag 'dams_copyright[beginDate]' %>
+  <%= label_tag 'dams_copyright[status]', "Status" %><%= text_field_tag 'dams_copyright[status]', '', class: "input-block-level" %>
+  <%= label_tag 'dams_copyright[jurisdiction]', "Jurisdiction" %><%= text_field_tag 'dams_copyright[jurisdiction]','', class: "input-block-level" %>
+  <%= label_tag 'dams_copyright[purposeNote]', "Purpose Note" %><%= text_field_tag 'dams_copyright[purposeNote]', '', class: "input-block-level" %>
+  <%= label_tag 'dams_copyright[note]', "Note" %><%= text_field_tag 'dams_copyright[note]', '', class: "input-block-level" %>
+  <%#= label_tag 'dams_copyright[beginDate]', "Begin Date" %><%#= text_field_tag 'dams_copyright[beginDate]', '', class: "input-block-level" %>
   <%= f.fields_for :date do |te| %>
     <%= te.label :value, "Date" %>
-    <%= te.text_field :value , :value => ""%>    
+    <%= te.text_field :value , :value => "", class: "input-block-level"%>    
     <%= te.label :beginDate, "Begin Date" %>
-    <%= te.text_field :beginDate, :value => ""%>
+    <%= te.text_field :beginDate, :value => "", class: "input-block-level"%>
     <%= te.label :endDate, "End Date" %>
-    <%= te.text_field :endDate, :value => ""%>    
+    <%= te.text_field :endDate, :value => "", class: "input-block-level"%>    
   <% end %>
   <br>
   <%=f.submit "Save", class: "btn btn-primary" %>
