--- a/app/views/dams_cultural_contexts/new.html.erb
+++ b/app/views/dams_cultural_contexts/new.html.erb
@@ -2,13 +2,13 @@
 <%= form_for @dams_cultural_context do |f| %>
   <%= render 'error_messages' %>
   <%= label_tag 'dams_cultural_context[name]', "Name" %>
-  <%= text_field_tag 'dams_cultural_context[name]', '', required: true %>
+  <%= text_field_tag 'dams_cultural_context[name]', '', required: true , class: "input-block-level"%>
   <%= label_tag 'dams_cultural_context[externalAuthority]', "ExternalAuthority" %>
-  <%= url_field_tag 'dams_cultural_context[externalAuthority]' %> 
+  <%= url_field_tag 'dams_cultural_context[externalAuthority]', '', class: "input-block-level"%> 
 
   <%= f.fields_for :culturalContextElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue %>
+    <%= te.text_field :elementValue, class: "input-block-level" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
