--- a/app/views/dams_iconographies/new.html.erb
+++ b/app/views/dams_iconographies/new.html.erb
@@ -2,13 +2,13 @@
 <%= form_for @dams_iconography do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'dams_iconography[name]', "Name" %>
-  <%= text_field_tag 'dams_iconography[name]', '', required: true %>
+  <%= text_field_tag 'dams_iconography[name]', '', required: true, class: "input-block-level" %>
   <%= label_tag 'dams_iconography[externalAuthority]', "ExternalAuthority" %>
-  <%= url_field_tag 'dams_iconography[externalAuthority]' %> 
+  <%= url_field_tag 'dams_iconography[externalAuthority]', '', class: "input-block-level" %> 
   
   <%= f.fields_for :iconographyElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue %>
+    <%= te.text_field :elementValue, class: "input-block-level" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
