--- a/app/views/mads_genre_forms/new.html.erb
+++ b/app/views/mads_genre_forms/new.html.erb
@@ -2,12 +2,12 @@
 <%= form_for @mads_genre_form do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'mads_genre_form[name]', "Name" %>
-  <%= text_field_tag 'mads_genre_form[name]', '', required: true %>
+  <%= text_field_tag 'mads_genre_form[name]', '', required: true, class: "input-block-level" %>
   <%= label_tag 'mads_genre_form[externalAuthority]', "ExternalAuthority" %>
-  <%= url_field_tag 'mads_genre_form[externalAuthority]' %> 
+  <%= url_field_tag 'mads_genre_form[externalAuthority]', '', class: "input-block-level" %> 
   <%= f.fields_for :genreFormElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue %>
+    <%= te.text_field :elementValue, class: "input-block-level" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
