--- a/app/views/mads_geographics/new.html.erb
+++ b/app/views/mads_geographics/new.html.erb
@@ -2,12 +2,12 @@
 <%= form_for @mads_geographic do |f| %>
 	<%= render 'error_messages' %>
   <%= label_tag 'mads_geographic[name]', "Name" %>
-  <%= text_field_tag 'mads_geographic[name]', '', required: true %>
+  <%= text_field_tag 'mads_geographic[name]', '', required: true, class: "input-block-level" %>
   <%= label_tag 'mads_geographic[externalAuthority]', "ExternalAuthority" %>
-  <%= text_field_tag 'mads_geographic[externalAuthority]' %>
+  <%= text_field_tag 'mads_geographic[externalAuthority]', '', class: "input-block-level" %>
   <%= f.fields_for :geographicElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue %>
+    <%= te.text_field :elementValue, class: "input-block-level" %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
