--- a/app/views/mads_topics/new.html.erb
+++ b/app/views/mads_topics/new.html.erb
@@ -2,13 +2,13 @@
 <%= form_for @mads_topic do |f| %>
   <%= render 'error_messages' %>
   <%= label_tag 'mads_topic[name]', "Name" %>
-  <%= text_field_tag 'mads_topic[name]', '', required: true %>
+  <%= text_field_tag 'mads_topic[name]', '', required: true, class: "input-block-level"  %>
   <%= label_tag 'mads_topic[externalAuthority]', "ExternalAuthority" %>
-  <%= url_field_tag 'mads_topic[externalAuthority]' %> 
+  <%= url_field_tag 'mads_topic[externalAuthority]', '', class: "input-block-level"  %> 
 
   <%= f.fields_for :topicElement do |te| %>
     <%= te.label :elementValue, "Element Value" %>
-    <%= te.text_field :elementValue %>
+    <%= te.text_field :elementValue, class: "input-block-level"  %>
   <% end %>
   <br>
   <%= render :partial => 'shared/edit_fields/scheme_fields' , :locals => {:f => f}%>
